--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,4 @@
+@import url('view-ui-plus/dist/styles/viewuiplus.css');
 
 .container{margin: 0 auto;}
 @media(min-width:576px){.container{max-width:540px;}}
